--- a/9.html
+++ b/9.html
@@ -37,7 +37,8 @@
 </head>
 <body>
 
-    <iframe src="https://indiandesistorie.blogspot.com/"></iframe>
+    <iframe src="https://contentblanksupersede.com/pmxujfkncq?key=436b59149b90e257f766b2530d2d3944"></iframe>
 
 </body>
 </html>
+
