--- a/9.html
+++ b/9.html
@@ -37,8 +37,9 @@
 </head>
 <body>
 
-    <iframe src="https://contentblanksupersede.com/pmxujfkncq?key=436b59149b90e257f766b2530d2d3944"></iframe>
+    <iframe src="https://indiandesistorie.blogspot.com/"></iframe>
 
 </body>
 </html>
+
 
