--- a/index.html
+++ b/index.html
@@ -328,18 +328,18 @@
         (function() {
             // मूवी वेबसाइट्स की लिस्ट
             const websites = [
-                { name: "Filmywap", url: "https://ukdevilz.github.io//filmywap" },
-                { name: "Filmywap1", url: "https://ukdevilz.github.io//filmywap1" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//filmy4wap" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//filmyzilla" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//coolmoviez" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//filmyzilla32" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//hindmovie" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//mkvfun" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//mkvmoviespoint" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//mp4Movies" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//mp4moviez" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io//tellyhd" },
+                { name: "Filmywap", url: "https://ukdevilz.github.io/filmywap" },
+                { name: "Filmywap1", url: "https://ukdevilz.github.io/filmywap1" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmy4wap" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmyzilla" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/coolmoviez" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmyzilla32" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/hindmovie" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mkvfun" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mkvmoviespoint" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mp4Movies" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mp4moviez" },
+                { name: "Filmyzilla", url: "https://ukdevilz.github.io/tellyhd" },
             ];
 
             const getThumbnailUrl = (url, width = 400) => {
