--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="1bPOoMa6M70bdpTOslenMNR1C-Nb9Eh-eXKC1xa_8Xw" />
+<meta name="google-site-verification" content="ZBR4rGSJnYYuglRovXqFHvlUuMPHeE2dTLStXIrO2ik" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5">
     
@@ -328,18 +328,18 @@
         (function() {
             // मूवी वेबसाइट्स की लिस्ट
             const websites = [
-                { name: "Filmywap", url: "https://ukdevilz.github.io/filmywap" },
-                { name: "Filmywap1", url: "https://ukdevilz.github.io/filmywap1" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmy4wap" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmyzilla" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/coolmoviez" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/filmyzilla32" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/hindmovie" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mkvfun" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mkvmoviespoint" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mp4Movies" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/mp4moviez" },
-                { name: "Filmyzilla", url: "https://ukdevilz.github.io/tellyhd" },
+                { name: "Filmywap", url: "https://best-movie-sites.netlify.app/filmywap" },
+                { name: "Filmywap1", url: "https://best-movie-sites.netlify.app/filmywap1" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/filmy4wap" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/filmyzilla" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/coolmoviez" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/filmyzilla32" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/hindmovie" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/mkvfun" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/mkvmoviespoint" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/mp4Movies" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/mp4moviez" },
+                { name: "Filmyzilla", url: "https://best-movie-sites.netlify.app/tellyhd" },
             ];
 
             const getThumbnailUrl = (url, width = 400) => {
